fixed layout bug with viewport sizing on mobile. implement redirect back to project upon successful login.
git-svn-id: http://svn.localprojects.net/gam2@1115 befef031-aaeb-48d0-b70f-681328309d3d

--- a/trunk/static/css/tc.gam.mobile.css
+++ b/trunk/static/css/tc.gam.mobile.css
@@ -125,16 +125,17 @@ label.nobtn { margin-left: 30px; }
 .merlin input[type=button]:hover {color: #F3F2F0; background: #7F7D7A; background: -moz-linear-gradient(top, #7F7D7A 0%, #A8A6A3 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7F7D7A), color-stop(100%,#A8A6A3)); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7F7D7A', endColorstr='#A8A6A3',GradientType=0 );}
 
 a.submit {
-	background-color:#e6e4e1; border:1px solid #cfcecb;
-	font-weight:bold; text-transform:uppercase;
-	cursor:pointer; color:#878786;
-	margin-top:5px;
-}
-a.submit {
+	margin-top:5px; padding: 10px 10px 14px 10px; display:inline-block;
+	background-color: #e5e4e1; border: 1px solid #b9b8b6;
+	font-size: 16px; line-height: 1; 
+	font-family: "ff-din-web-1","ff-din-web-2", "Franklin Gothic Medium", "Franklin Gothic Medium", Helvetica, Arial, sans-serif;
+	font-weight:bold; text-transform:uppercase; color:#878786;
+	
 	-webkit-transition: 100ms ease-in;  -moz-transition: 100ms ease-in; -o-transition: 100ms ease-in; transition: 100ms ease-in;
 	-moz-border-radius: 2px; -webkit-border-radius: 2px; -khtml-border-radius: 2px; border-radius: 2px;
-	font-family: "ff-din-web-1","ff-din-web-2", "Franklin Gothic Medium", "Franklin Gothic Medium", Helvetica, Arial, sans-serif;
 }
+
+a.submit:active {color: #F3F2F0; background: #7F7D7A; background: -moz-linear-gradient(top, #7F7D7A 0%, #A8A6A3 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7F7D7A), color-stop(100%,#A8A6A3)); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7F7D7A', endColorstr='#A8A6A3',GradientType=0 );}
 
 div.primary-action { margin:0 auto; display:block; width:107px; height: 76px; top: 14px; right: 10px; }
 div.primary-action a { display:block; }
@@ -154,7 +155,7 @@ div.primary-action a span { visibility: hidden; }
 
 /* Add Idea  */
 
-.console span.hey { display: block; position: absolute; left:-15px; top:0px; background: url(../images/button_heyNYC_mobile_2.png) top left no-repeat transparent; height: 46px; width: 108px; }
+.console span.hey { display: block; position: absolute; left:-17px; top:-5px; background: url(../images/button_heyNYC_mobile_2.png) top left no-repeat transparent; height: 46px; width: 108px; }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
         .console span.hey { display: block; position: absolute; left: -6px; top:0px; background: url(../images/button_heyNYC_mobile_hdpi.png) top left no-repeat transparent; background-size: 108px 46px; height: 46px; width: 108px; }
@@ -207,7 +208,7 @@ div.location-hood-list a{ }
 div.location-hood-list a:hover{ background-color:#cfcecc; }
 div.location-hood-list li.selected a{ background-color:#cfcecc; }
 div.location-hood-list a span{ font-weight:bold; }
-span.error { display: block; clear:left; margin-top: 6px; color: #e53224; font-size: 11px; line-height: 11px; font-style: italic; }
+span.error { display: block; clear:left; margin:6px 0; color: #e53224; font-size: 11px; line-height: 11px; font-style: italic; }
 
 /* Join List  */
 
@@ -257,29 +258,20 @@ ul.projects-list li { height: 105px; width: auto; padding-top: 20px; padding-bot
 
 /*  Login/Signup  */
 
-.page .login-social { 
-	display:block;
+.login-social { 
 	padding-bottom:20px; margin-bottom:35px; 
 	border-bottom:1px solid #E5E5E3; 
 }
-.page .login-social .social-login { width:100%; }
+.login-social .social-login { width:100%; }
 
-.page.signup .login-social { border:none; margin-bottom:10px;}
+.signup .login-social { border:none; margin-bottom:10px;}
 
-.page .login-or { margin:0 auto; text-transform:uppercase; font-size:18px; font-style:italic; color:#A6A5A4;
+.login-or { margin:0 auto; text-transform:uppercase; font-size:18px; font-style:italic; color:#A6A5A4;
 	background-color:#F3F2F0; position:relative; bottom:-33px; text-align:center; display:block; width:45px; }
 
-.mobile-login .step { float:none; }
-
-
-a.submit { border: 1px solid #b9b8b6; font-family: "ff-din-web-1","ff-din-web-2", "Franklin Gothic Medium", Verdana, Arial, sans-serif;   }
-a.submit {background-color: #e5e4e1; color: #878786; font-weight: bold; font-size: 16px; line-height: 1; padding: 10px 10px 14px 10px; cursor: pointer; display:inline-block;}
-a.submit:hover {color: #F3F2F0; background: #7F7D7A; background: -moz-linear-gradient(top, #A8A6A3 0%, #7F7D7A 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#A8A6A3), color-stop(100%,#7F7D7A)); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A8A6A3', endColorstr='#7F7D7A',GradientType=0 );}
-a.submit:active {color: #F3F2F0; background: #7F7D7A; background: -moz-linear-gradient(top, #7F7D7A 0%, #A8A6A3 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7F7D7A), color-stop(100%,#A8A6A3)); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7F7D7A', endColorstr='#A8A6A3',GradientType=0 );}
-
-.page p.signup { width:140px; float:right; }
-.page.signup p.signup { width:auto; float:left; }
-.page p.signup a{ text-transform:uppercase; text-decoration:underline; }
+p.signup { width:50%; float:right; text-align:right; }
+p.signup a{ text-transform:uppercase; text-decoration:underline; }
+.signup p.signup { width:auto; float:left; }
 
 /* Validation */
 
